# icl_stretch_ros

./: .gitignore  README.md  dependencies.repos  test.html
data_analysis/: README.md  analysis.ipynb  avg_duration.csv  dev.ipynb  questionnaire_analysis.ipynb
data_analysis/JMP/: Questionnaire (Responses)-Results - All.jrp  Questionnaire (Responses)-Results - Bivariate.jrp  Questionnaire (Responses)-Results - Distance.jrp  Questionnaire (Responses)-Results - Distribution.jrp  Questionnaire (Responses)-Results - Fit Least Squares.jrp  Questionnaire (Responses)-Results - annotations.jrp  Questionnaire (Responses)-Results - dist.jrp  Questionnaire (Responses)-Results -Distances.jrp  Questionnaire (Responses)-Results.jmp  Questionnaire (Responses).xlsx  Results - Distribution 2.jrp  Results - Distribution.jrp  Results - Godspeed-Animacy.jrp  Results - Godspeed-Anthropomorphism.jrp  Results - Godspeed-Likeability.jrp  Results - Godspeed-PerceivedIntel.jrp  Results - Godspped.jrp  Results - RoSAS.jrp  Results - personality.jrp  Results - rosas - mean.jrp  Results-.xlsx  Results.jmp  avg_duration.csv  (+3 more)
grasp_tool/: CMakeLists.txt  package.xml
sp_analysis/: CMakeLists.txt  README.md  package.xml
sp_analysis/scripts/: analysis.py  human_traj_analysis.py  leg_recorder.py  people_detection.py  play_and_record.py  plot.py  plot_helpers.py  process.py  tracking.py  trajectory_analysis.py
sp_core/: CMakeLists.txt  package.xml  setup.py
sp_msgs/: CMakeLists.txt  package.xml
sp_navigation/: CMakeLists.txt  package.xml
sp_perception/: CMakeLists.txt  package.xml
sp_voice/: CMakeLists.txt  package.xml
stretch_electromagnet/: .gitignore  platformio.ini
(+98 files in other folders)
